data/derived/comb/progs/unify/prog3605.ml.out
Characters 85-92:
  if boo = true then wwhile(f, express)
                               ^^^^^^^
Error: This expression has type 'a but an expression was expected of type
         'a * bool
       The type variable 'a occurs inside 'a * bool
